# Dong-Lanfang-CG-HW

3D_Object/: CMakeLists.txt
3D_Object/include/: Model.h
3D_Object/resource/luweiqi/: luweiqi.txt  文件格式说明.txt
3D_Object/src/: Model.cpp  main.cpp
Fountain/: CMakeLists.txt
Fountain/src/: main.cpp
Hermit_Bezier/: CMakeLists.txt
Hermit_Bezier/src/: main.cpp
Parabola/: CMakeLists.txt
Parabola/src/: main.cpp
Scan_Line/: CMakeLists.txt
Scan_Line/src/: main.cpp
